--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@apollo/client": "^3.3.11",
     "graphql": "^15.5.0",
+    "lodash": "^4.17.21",
     "next": "10.0.8",
     "react": "17.0.1",
     "react-dom": "17.0.1"
